odin-calculator/styles.css
* {
    margin:0px;
    padding:0px;
}

body {
    background-color: whitesmoke;
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10px;
    padding-top: 10px;
}

.calculator {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 350px;
    background-color: gainsboro;
    border: 3px solid black;
    padding: 10px;
    gap: 10px;
}

.screen {
    display: flex;
    background-color: bisque;
    height: 80px;
    width: 350px;
    outline: 3px solid black;
    justify-content: right;
    align-items: center;
    font-size: 50px;
    box-sizing:border-box;
    padding: 5px;
}

.buttonpad {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 10px;
}

.btn {
    height: 80px;
    width: 80px;
    outline: 1.5px solid black;
    font-size: large;
    border-radius: 0px;
    background-color: white;
    box-shadow: 0 9px #999;
    transition: all 0.3s ease-in-out;

}

.AC {
    background-color: rgb(245, 91, 91);
}

.plusminus, 
.modulus, .divider,
.multiply, .minus, 
.plus, .equals {
    background-color: darkgrey;
} 


.btn:active {
    background-color: white;
    box-shadow: 2px 5px #666;
    transform: translateY(2px)
  }

.zero{
    width: 170px;
}

